[tool.poetry]
name = "vk_photo_downloader"
version = "0.1.0"
description = ""
authors = ["XenoCorn"]

[tool.poetry.dependencies]
python = "^3.7"
vk-api = "^11.9.4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
